Run Main Cycle and save pkl files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ gwish.csv
 adj.csv
 
 __pycache__/
+2022-02-08_2243_B_converge.pkl
+2022-02-08_2243_Berrors.pkl
+2022-02-08_2243_edges_log.pkl
+2022-02-08_2243_errors_log.pkl
+2022-02-08_2243_graph_changes.pkl
+2022-02-08_2243_sampled_Gs.pkl
+2022-02-08_2243_waiting_times.pkl
+2022-02-08_2243_Zerrors.pkl
