Z from W redundancy and main with uninformative initials

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ __pycache__/
 2022-02-08_2243_sampled_Gs.pkl
 2022-02-08_2243_waiting_times.pkl
 2022-02-08_2243_Zerrors.pkl
+2022-02-09_1107_B_converge.pkl
+2022-02-09_1107_Berrors.pkl
+2022-02-09_1107_edges_log.pkl
+2022-02-09_1107_errors_log.pkl
+2022-02-09_1107_graph_changes.pkl
+2022-02-09_1107_sampled_Gs.pkl
+2022-02-09_1107_waiting_times.pkl
+2022-02-09_1107_Zerrors.pkl
